freeScroll : Enables content to be freely scrolled and flicked without aligning cells to an end position. contain : Contains cells to gallery element to prevent excess scroll at beginning or end. Has no effect if wrapAround: true.

--- a/css/main.css
+++ b/css/main.css
@@ -21,7 +21,7 @@ body {
   width: 66%;
   height: 200px;
   margin-right: 10px;
-  background: #FF69B4;
+  background: #00FFFF;
   counter-increment: gallery-cell;
 }
 
